--- a/buildquantumvis/pkg-fix/packages-templates/inkscape/REPLACEMENTS/usr/share/applications/inkscape.desktop
+++ b/buildquantumvis/pkg-fix/packages-templates/inkscape/REPLACEMENTS/usr/share/applications/inkscape.desktop
@@ -1,7 +1,4 @@
-
-#150420
-
-echo '[Desktop Entry]
+[Desktop Entry]
 Version=1.0
 Name[af]=Inkscape vektor redakteur
 Name[am]=Inkscape የቬክተር አርታዒ
@@ -26,14 +23,14 @@ Name[dv]=ރޓަޑިއެ ރޓަކްވެ ޕްކޭސްކްންއި
 Name[ee]=Inkscape vektor nuŋlɔla
 Name[el]=Διανυσματικό πρόγραμμα επεξεργασίας Inkscape
 Name[eo]=Inkscape vektora redaktilo
-Name[es]=Editor de vectores Inkscape
+Name[es]=Inkscape: editor vectorial
 Name[et]=Inkscape vektorredaktor
 Name[eu]=Inkscape bektorial editorea
 Name[fa]=Inkscape ﯼﺭﺍﺩﺮﺑ ﺮﮕﺸﯾﺍﺮﯾﻭ
 Name[fi]=Inkscape vektorieditori
 Name[fj]=Edita vector inkscape
 Name[fo]=Inkscape vector editor
-Name[fr]=Éditeur vectoriel Inkscape
+Name[fr]=Éditeur de dessin vectoriel : Inkscape
 Name[fy]=Inkscape vector bewurker
 Name[ga]=Inkscape eagarthóir veicteoir
 Name[gd]=Deasaiche inkscape vector
@@ -50,7 +47,7 @@ Name[hy]=Inkscape վեկտորի խմբագիր
 Name[id]=Editor vektor inkscape
 Name[ig]=Inkscape vector nchịkọta akụkọ
 Name[is]=Inkscape vektor ritstjóri
-Name[it]=Editor vettoriale Inkscape
+Name[it]=Editor di vettori Inkscape
 Name[iu]=Inkscape vector−ᒧᑦ ᐋᖅᑭᒃᓱᐃᔨ
 Name[ja]=Inkscape ベクター エディター
 Name[jv]=Editor vektor Inkscape
@@ -69,7 +66,7 @@ Name[lo]=ບັນນາທິການ vector Inkscape
 Name[lt]=Inkscape vektorinis redaktorius
 Name[lv]=Inkscape vektoru redaktors
 Name[mg]=Inkscape vector editor
-Name[mi]=ētita vector Inkscape
+Name[mi]=Inkscape vector ētita
 Name[mk]=Векторски уредувач на Inkscape
 Name[ml]=ഇങ്ക്u200cസ്u200cകേപ്പ് വെക്റ്റർ എഡിറ്റർ
 Name[mn]=Inkscape вектор засварлагч
@@ -78,8 +75,9 @@ Name[ms]=Penyunting vektor Inkscape
 Name[mt]=Editur tal-vettur ta Inkscape
 Name[my]=Inkscape vector တည်းဖြတ်သူ
 Name[ne]=Inkscape भेक्टर सम्पादक
-Name[nl]=Inkscape vector-editor
+Name[nl]=Inkscape-vectoreditor
 Name[no]=Inkscape vektor editor
+Name[ny]=Inkscape vector editor
 Name[om]=Gulaalaa veektarii inkscape
 Name[or]=ଇନ୍ସସ୍କେପ୍ ଭେକ୍ଟର ଏଡିଟର୍ |
 Name[pa]=Inkscape ਵੈਕਟਰ ਸੰਪਾਦਕ
@@ -90,7 +88,7 @@ Name[qu]=Inkscape vector editor nisqa
 Name[ro]=Editor de vectori Inkscape
 Name[ru]=Векторный редактор Inkscape
 Name[rw]=Inkscape vector umwanditsi
-Name[sa]=Inkscape सदिश सम्पादक
+Name[sa]=इंकस्केप सदिश सम्पादक
 Name[sd]=Inkscape ﺮٽﻳڊﻳﺍ ﺮﭩﮑﯾﻭ
 Name[si]=Inkscape දෛශික සංස්කාරකය
 Name[sk]=vektorový editor Inkscape
@@ -146,12 +144,12 @@ Comment[co]=Crea è edità limaghjini di Grafica Vector Scalable
 Comment[cs]=Vytvářejte a upravujte obrázky škálovatelné vektorové grafiky
 Comment[cy]=Creu a golygu delweddau Graffeg Fector Scalable
 Comment[da]=Opret og rediger skalerbare vektorgrafikbilleder
-Comment[de]=Erstellen und bearbeiten Sie skalierbare Vektorgrafiken
+Comment[de]=Erstellen und Bearbeiten skalierbarer Vektorgrafiken
 Comment[dv]=ންރުކުޓްޑިއެ އިދައްފައު އްތަރުވީސްތަ ސްކްފިރެގް ރޓަކްވެ ލްބަލަކޭސް
 Comment[ee]=Wɔ Scalable Vector Graphics nɔnɔmetatawo eye nàtrɔ asi le wo ŋu
 Comment[el]=Δημιουργία και επεξεργασία εικόνων Scalable Vector Graphics
 Comment[eo]=Krei kaj redakti bildojn de Scalable Vector Graphics
-Comment[es]=Crear y editar imágenes de gráficos vectoriales escalables
+Comment[es]=Crear y editar imágenes de gráficos vectoriales
 Comment[et]=Looge ja redigeerige skaleeritava vektorgraafika pilte
 Comment[eu]=Sortu eta editatu grafiko bektorial eskalagarriak
 Comment[fa]=ﺪﯿﻨﮐ ﺶﯾﺍﺮﯾﻭ ﻭ ﺩﺎﺠﯾﺍ ﺍﺭ ﺮﯾﺬﭘ ﺱﺎﯿﻘﻣ ﯼﺭﺍﺩﺮﺑ ﯽﮑﯿﻓﺍﺮﮔ ﺮﯾﻭﺎﺼﺗ
@@ -205,6 +203,7 @@ Comment[my]=Scalable Vector Graphics ပုံများကို ဖန်တ
 Comment[ne]=स्केलेबल भेक्टर ग्राफिक्स छविहरू सिर्जना र सम्पादन गर्नुहोस्
 Comment[nl]=Creëer en bewerk Scalable Vector Graphics-afbeeldingen
 Comment[no]=Lag og rediger skalerbare vektorgrafikkbilder
+Comment[ny]=Pangani ndikusintha zithunzi za Scalable Vector Graphics
 Comment[om]=Fakkiiwwan Giraafiksii Veektarii Safaramuu dandaan uumuu fi gulaaluu
 Comment[or]=ମାପନୀୟ ଭେକ୍ଟର ଗ୍ରାଫିକ୍ସ ପ୍ରତିଛବିଗୁଡିକ ସୃଷ୍ଟି ଏବଂ ସଂପାଦନ କରନ୍ତୁ |
 Comment[pa]=ਸਕੇਲੇਬਲ ਵੈਕਟਰ ਗ੍ਰਾਫਿਕਸ ਚਿੱਤਰ ਬਣਾਓ ਅਤੇ ਸੰਪਾਦਿਤ ਕਰੋ
@@ -258,27 +257,4 @@ Exec=inkscape
 Terminal=false
 StartupNotify=true
 MimeType=image/svg+xml;image/svg+xml-compressed;application/vnd.corel-draw;application/pdf;application/postscript;image/x-eps;application/illustrator;image/cgm;image/x-wmf;application/x-xccx;application/x-xcgm;application/x-xcdt;application/x-xsk1;application/x-xcmx;image/x-xcdr;application/visio;application/x-visio;application/vnd.visio;application/visio.drawing;application/vsd;application/x-vsd;image/x-vsd;
-Icon=inkscape.png' > usr/share/applications/inkscape.desktop
-
-#20210419 image name has changed...
-mkdir -p usr/share/pixmaps
-if [ -f usr/share/icons/hicolor/16x16/apps/inkscape.png ];then
- ln -s ../icons/hicolor/16x16/apps/inkscape.png usr/share/pixmaps/inkscape.png
-else
- ln -s ../icons/hicolor/16x16/apps/org.inkscape.Inkscape.png usr/share/pixmaps/inkscape.png
-fi
-
-#20210414 oe
-if [ -f usr/share/applications/org.inkscape.Inkscape.desktop ];then
- rm -f usr/share/applications/org.inkscape.Inkscape.desktop
-fi
-
-#20240222 de-bloat...
-if [ -d usr/share/inkscape/tutorials ];then
- rm -rf usr/share/inkscape/tutorials
- mkdir usr/share/inkscape/tutorials
-fi
-if [ -d usr/share/inkscape/examples ];then
- rm -rf usr/share/inkscape/examples
- mkdir usr/share/inkscape/examples
-fi
+Icon=inkscape.png
