--- a/buildquantumvis/pkg-fix/packages-templates/samba/REPLACEMENTS/etc/samba/smb.conf
+++ b/buildquantumvis/pkg-fix/packages-templates/samba/REPLACEMENTS/etc/samba/smb.conf
@@ -1,18 +1,12 @@
-#this is a very simple smb.conf to get you started
-#coutesy rcrsn51 and gcmartin
-#151002 BK change from /root to /file
-#170203 BK for easy linux, change /file to /mnt/files
-#170930 see FIXUPHACK
-#20211205 change /mnt/files to /files
 [global]
-	workgroup = Workgroup
+	workgroup = WORKGROUP
 	server string = Puppy Samba Server
 	security = user
 	map to guest = Bad Password
 	printing = cups
 	printcap name = cups
 	load printers = yes
-	
+	pid directory = /var/run/samba
 
 [puppyshare]
 	path = /files
