packages-templates: FIXUPHACK fix

--- a/buildquantumvis/pkg-fix/packages-templates/parcellite/REPLACEMENTS/usr/share/applications/parcellite.desktop
+++ b/buildquantumvis/pkg-fix/packages-templates/parcellite/REPLACEMENTS/usr/share/applications/parcellite.desktop
@@ -31,7 +31,7 @@ Name[fa]=ﺮﭙﯿﻠﮔ ﺩﺭﻮﺑ ﭗﯿﻠﮐ ﺮﯾﺪﻣ
 Name[fi]=Parcellite leikepöydän hallinta
 Name[fj]=Manidia ni clipboard ni Parcellite
 Name[fo]=Parcellite clipboard manager
-Name[fr]=Gestionnaire de presse-papiers Parcellite
+Name[fr]=Gestionnaire de presse-papiers : Parcellite
 Name[fy]=Parcellite klamboerdbehearder
 Name[ga]=Bainisteoir gearrthaisce glipper
 Name[gd]=Manaidsear clipboard glipper
