rootfs-skeleton: applications fix

--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/Puppy-Event-Manager.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/Puppy-Event-Manager.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[fr]=Gestion des évènements
+Name[fr]=Gestionnaire des évènements : Puppy Event Manager
 Name[bg]=Puppy Event Manager
 Name[de]=Welpen-Event-Manager
 Name[es]=Gestos de eventos de Puppy
@@ -126,7 +126,7 @@ Name[zh]=小狗活动经理
 Name[zu]=Umphathi Womcimbi We-Puppy
 Name=Puppy Event Manager
 Icon=so.xpm
-Comment[fr]=Gestion des évènements
+Comment[fr]=Gestionnaire des évènements : Puppy Event Manager
 Comment[bg]=Puppy Event Manager
 Comment[de]=Welpen-Event-Manager
 Comment[es]=Gestor de eventos de Puppy
