--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/moveicons.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/moveicons.desktop
@@ -30,7 +30,7 @@ Name[fa]=ﭖﺎﺘﮑﺳﺩ ﺎﯾ MoveIcons ﯽﻨﯿﺳ
 Name[fi]=MoveIcons-alusta tai työpöytä
 Name[fj]=Tere ni MoveIcons se delanidesi
 Name[fo]=MoveIcons bakkan ella desktop
-Name[fr]=Plateau ou bureau MoveIcons
+Name[fr]=Icônes vers barre des tâches ou bureau : MoveIcons
 Name[fy]=MoveIcons lade of buroblêd
 Name[ga]=Tráidire nó deasc MoveIcons
 Name[gd]=Treidhe no deasg MoveIcons
@@ -155,7 +155,7 @@ Comment[fa]=ﺪﯿﻨﮐ ﻞﻘﺘﻨﻣ ﭖﺎﺘﮑﺳﺩ ﺎﯾ ﯽﻨﯿﺳ 
 Comment[fi]=Siirrä kuvakkeet lokeroon tai työpöydälle
 Comment[fj]=Toso na ivakatakilakila ki na tere se delanidesi
 Comment[fo]=Move icons to bakkan ella skriviborð.
-Comment[fr]=Déplacer les icônes vers le plateau ou le bureau
+Comment[fr]=Déplacer les icônes vers la barre des tâches ou le bureau
 Comment[fy]=Ferpleats ikoanen nei lade of buroblêd
 Comment[ga]=Bog deilbhíní chuig tráidire nó deasc
 Comment[gd]=Gluais ìomhaighean gu treidhe no deasg
