packages-templates/htop: fix

--- a/buildquantumvis/pkg-fix/packages-templates/htop/REPLACEMENTS/usr/share/applications/htop.desktop
+++ b/buildquantumvis/pkg-fix/packages-templates/htop/REPLACEMENTS/usr/share/applications/htop.desktop
@@ -31,7 +31,7 @@ Name[fa]=Htop ﻢﺘﺴﯿﺳ ﺪﻨﯾﺁﺮﻓ ﺮﮕﺸﯾﺎﻤﻧ
 Name[fi]=Htop system process viewer
 Name[fj]=Dausarasara ena iVakarau ni Htop
 Name[fo]=Htop system process viewer
-Name[fr]=Visionneuse de processus système Htop
+Name[fr]=Visionneuse des processus système : Htop
 Name[fy]=Htop system process viewer
 Name[ga]=Amharcóir Próiseas an Chórais Htop
 Name[gd]=Sealladair pròiseas siostam Htop
@@ -158,7 +158,7 @@ Comment[fa]=Htop ﻢﺘﺴﯿﺳ ﺪﻨﯾﺁﺮﻓ ﺮﮕﺸﯾﺎﻤﻧ
 Comment[fi]=Htop System Process Viewer
 Comment[fj]=Dausarasara ena iVakarau ni Htop
 Comment[fo]=Htop System Process Viewer
-Comment[fr]=Visionneuse de processus système Htop
+Comment[fr]=Visionneuse des processus système Htop
 Comment[fy]=Htop System Process Viewer
 Comment[ga]=Amharcóir Próiseas an Chórais Htop
 Comment[gd]=Sealladair pròiseas siostam Htop
